--- a/views/history.ejs
+++ b/views/history.ejs
@@ -86,5 +86,5 @@
     </div>
   </div>
   <!-- Footer -->
-  <%- include('../partials/_footer.ejs') %>
+  <%- include('./partials/_footer.ejs') %>
 </section>
