--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -2,7 +2,7 @@
   <div
     class="mx-auto max-w-6xl flex flex-col w-full px-4 md:py-12 md:px-8 text-gray-800"
   >
-    <form action="/cart/buy" method="POST">
+    <form action="/transaction/buy" method="POST">
       <h1 class="text-xl lg:text-3xl font-bold mt-8 mb-4 flex">
         Buy Stock :<input
           class="bg-transparent max-w-sm w-24 ml-2"
