--- a/views/addBalance.ejs
+++ b/views/addBalance.ejs
@@ -21,7 +21,7 @@
       >
         <div class="text-center mb-4">
           <label class="block text-gray-700 text-2xl font-bold mb-2">
-            Enter amount : Minimun $50
+            Enter amount : Minimum $50
           </label>
           <input
             id="amount"
