--- a/views/login.ejs
+++ b/views/login.ejs
@@ -644,7 +644,7 @@
               class="w-full p-3 text-sm bg-red-700 rounded-lg font-semibold uppercase px-6 lg:px-10"
               href="#"
             >
-              SignUp
+              SignIn
             </button>
             <!-- <a
               href="/user/signup"
