No results found added in search

--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -234,8 +234,10 @@
           <li class="bg-white p-2 w-full ${(i%2===0) ? 'bg-gray-300' : 'bg-gray-100'}">${item.Symbol}</li>
           </a>`
       }
+      if ( n === 0 ){
+        list += `<li class="bg-white p-2 w-full bg-gray-100">No results found</li>`
+      }
       document.getElementById('search-result').innerHTML = list;
-      console.log(data)
   })
 
   let profitLossVal = document.getElementById("profitLoss").innerHTML;
