Adding CTA to hero section

--- a/views/partials/_nav.ejs
+++ b/views/partials/_nav.ejs
@@ -55,7 +55,7 @@
     <div class="flex justify-center align-center rounded-full">
       <div class="icon relative inline-block w-24 rounded-full">
         <img
-          class="w-24 h-24 border-8 rounded-full border-8 border-blue-900 box-1 rounded-full text-xs flex justify-center items-center text-center font-semibold"
+          class="w-24 h-24 border-4 rounded-full border-blue-900 box-1 rounded-full text-xs flex justify-center items-center text-center font-semibold"
           src="<%= user.image %>"
           alt="User Profile Image "
         />
