--- a/views/login.ejs
+++ b/views/login.ejs
@@ -64,9 +64,8 @@
           <button
             onClick="openModal()"
             class="bg-red-700 text-white px-4 py-2 mt-2 mr-1 text-xs font-semibold bg-transparent rounded md:mt-0 md:ml-4 hover:bg-red-400 focus:bg-red-600 focus:outline-none focus:shadow-outline"
-            href="#"
           >
-            Sign In / Register
+            Sign in / Register
           </button>
         </div>
       </nav>
@@ -89,6 +88,14 @@
           Welcome to TradeByte, stocks trading simulation webapp. Your one stop
           to all the latest stocks and their insights.
         </p>
+        <div>
+          <button
+            onClick="openModal()"
+            class="text-xl bg-red-700 text-white px-4 py-2 mt-4 mr-1 text-xs font-semibold bg-transparent rounded hover:bg-red-400 focus:bg-red-600 focus:outline-none focus:shadow-outline"
+          >
+            Sign in
+          </button>
+        </div>
       </div>
       <div class="illustration-box w-full md:w-2/3">
         <img src="../images/desktop-mockup.png" alt="TradeByte Illustration" />
