--- a/views/login.ejs
+++ b/views/login.ejs
@@ -14,7 +14,7 @@
             alt="Logo"
           />
         </a>
-        <h4 class="font-bold text-center ml-2 pt-1">
+        <h4 class="hidden md:block font-bold text-center ml-2 pt-1">
           <a
             href="/"
             class="hover:text-gray-900 tracking-widest text-2xl md:text-2xl lg:text-3xl tradebyte-logo"
@@ -91,7 +91,7 @@
         <div>
           <button
             onClick="openModal()"
-            class="text-xl bg-red-700 text-white px-4 py-2 mt-4 mr-1 text-xs font-semibold bg-transparent rounded hover:bg-red-400 focus:bg-red-600 focus:outline-none focus:shadow-outline"
+            class="text-lg md:text-xl bg-red-700 text-white px-4 py-2 mt-4 mr-1 text-xs font-semibold bg-transparent rounded hover:bg-red-400 focus:bg-red-600 focus:outline-none focus:shadow-outline"
           >
             Sign in
           </button>
