Testimonial height change improved

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -106,7 +106,7 @@
   <section id="features" class="features bg-gray-200">
     <div class="max-w-5xl mx-auto p-8">
       <h2
-        class="heading text-gray-800 text-3xl md:text-5xl text-center font-bold italic mb-6 underline"
+        class="heading text-gray-800 text-3xl md:text-5xl text-center font-bold italic mb-6"
       >
         Features of TradeByte
       </h2>
@@ -115,13 +115,12 @@
           <h3
             class="text-2xl md:text-3xl lg:text-4xl font-semibold mb-2 text-gray-700"
           >
-            Search for Stocks in Market
+            Search for stocks in the Market
           </h3>
           <p class="text-sm md:text-lg lg:text-xl text-gray-600">
             You can search for multiple stocks from different companies and know
-            their insights from past trends. The User Interface will make it
-            easy for you to navigate through the web app. You can also mark your
-            favourite stocks to keep a track of the companies.
+            their insights from the past trends. You can also mark your
+            favourite stocks to keep a track.
           </p>
         </div>
         <div class="hidden md:block img-box w-1/2 h-1/2">
@@ -139,10 +138,10 @@
           <h3
             class="text-2xl md:text-3xl lg:text-4xl font-semibold mb-2 text-gray-700"
           >
-            View Analysis of a stock
+            View analysis of a stock
           </h3>
           <p class="text-sm md:text-lg lg:text-xl text-gray-600">
-            We provide Analysis of a stock from a particular company as well in
+            We provide analysis of a stock from a particular company as well in
             the form of graphs and other related information like market
             capital, profit margin and loads of other things. You can buy the
             stocks easily and securely.
@@ -164,7 +163,7 @@
             Buy and Sell stocks
           </h3>
           <p class="text-sm md:text-lg lg:text-xl text-gray-600">
-            Buying and selling stocks was never this easier, we have made a
+            Buying and selling stocks was never this easy, we have made a
             wallet for you where you can transfer your balance and directly make
             payments while buying a stock. You can also buy multiple stocks. We
             provide a confirmation email as well to make sure it was you doing
@@ -209,7 +208,7 @@
   <section id="testimonials" class="testimonials">
     <div class="max-w-5xl mx-auto p-8">
       <h2
-        class="heading text-gray-800 text-3xl md:text-5xl text-center font-bold italic mb-6 underline"
+        class="heading text-gray-800 text-3xl md:text-5xl text-center font-bold italic mb-6"
       >
         From Our Maintainer and Contributors
       </h2>
@@ -265,53 +264,40 @@
             <div class="h-full relative z-10">
               <div x-show.immediate="testimonialActive === 1">
                 <p
-                  class="text-gray-600 serif font-normal italic px-6 py-6 md:py-12 lg:px-16 md:py-6 text-md lg:text-xl"
+                  class="text-gray-600 serif font-normal italic px-6 py-12 md:py-16 lg:px-16 text-md h-64"
                   x-show.transition="testimonialActive == 1"
                 >
                   It was challenging to plan and implement the project workflow
                   to maintain the code quality so that the team will contribute
-                  without worrying about other things. It was a fun experience
-                  to mentor a team while guiding them through their learning
-                  process in 3 months. The team did very well and the project
+                  without worrying about other things. The team did very well and the project
                   turned out to be the way I wanted.
                 </p>
               </div>
 
               <div x-show.immediate="testimonialActive === 2">
                 <p
-                  class="text-gray-600 serif font-normal italic px-6 py-6 md:py-12 lg:px-16 md:py-6 text-md lg:text-xl"
+                  class="text-gray-600 serif font-normal italic px-6 py-12 md:py-16 lg:px-16 text-md h-64"
                   x-show.transition="testimonialActive == 2"
                 >
-                  Working with TradeByte team was a great experience! Thanks to
-                  our mentor Pavan and other active members who made the project
-                  possible. I love the final app with all the features. I
-                  learned and worked on backend for the first time so I was
-                  scared but it turned out really well and I learned a lot apart
-                  from code like working with a team. The tasks were cool and
-                  challenging and I am proud to say I completed them all and
-                  even did extra work. Really loved the collaboration with the
-                  team.
+                  Working with TradeByte team was a great experience! I worked with backend for the first time and it turned out really well. I loved collaborating with the team.
                 </p>
               </div>
 
               <div x-show.immediate="testimonialActive === 3">
                 <p
-                  class="text-gray-600 serif font-normal italic px-6 py-6 md:py-12 lg:px-16 md:py-6 text-md lg:text-xl"
+                  class="text-gray-600 serif font-normal italic px-6 py-12 md:py-16 lg:px-16 text-md h-64"
                   x-show.transition="testimonialActive == 3"
                 >
                   I had a great learning experience here, we developed 3 apps
-                  including the main project. Our mentor Pavan created a well
-                  great curriculum which covered all topics from basic to the
-                  advanced needed to create the main project. He managed the
+                  including the main project. He managed the
                   team very well and assigned us task according to our area of
-                  interest. TradeByte team members were great to work with. I
-                  would like to do some project together again in future.
+                  interest. TradeByte team members were great to work with.
                 </p>
               </div>
 
               <div x-show.immediate="testimonialActive === 4">
                 <p
-                  class="text-gray-600 serif font-normal italic px-6 py-6 md:py-12 lg:px-16 md:py-6 text-md lg:text-xl"
+                  class="text-gray-600 serif font-normal italic px-6 py-12 md:py-16 lg:px-16 text-md h-64"
                   x-show.transition="testimonialActive == 4"
                 >
                   I am really happy that I was a part of this amazing team and
@@ -323,7 +309,7 @@
 
               <div x-show.immediate="testimonialActive === 5">
                 <p
-                  class="text-gray-600 serif font-normal italic px-6 py-6 md:py-12 lg:px-16 md:py-6 text-md lg:text-xl"
+                  class="text-gray-600 serif font-normal italic px-6 py-12 md:py-16 lg:px-16 text-md h-64"
                   x-show.transition="testimonialActive == 5"
                 >
                   The TradeByte project is really nice and all the features are
@@ -335,7 +321,7 @@
 
               <div x-show.immediate="testimonialActive === 6">
                 <p
-                  class="text-gray-600 serif font-normal italic px-6 py-6 md:py-12 lg:px-16 md:py-6 text-md lg:text-xl"
+                  class="text-gray-600 serif font-normal italic px-6 py-12 md:py-16 lg:px-16 text-md h-64"
                   x-show.transition="testimonialActive == 6"
                 >
                   Tradebyte was a lovely project. Working with open-source
@@ -441,7 +427,7 @@
               >
                 <img
                   src="https://avatars0.githubusercontent.com/u/48706652?s=460&u=8ce212fab10137d684ddee9c6a3503f9273f530a&v=4"
-                  class="rounded-full w-16 h-16 mr-1"
+                  class="rounded-full w-16 h-16 mr-4"
                   alt="Fab Rizvi"
                 />
                 <div class="text-left">
@@ -651,7 +637,7 @@
               class="w-full p-3 text-sm bg-red-700 rounded-lg font-semibold uppercase px-6 lg:px-10"
               href="#"
             >
-              SignIn
+              Join
             </button>
             <!-- <a
               href="/user/signup"
