Contributor -> core team member

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -210,7 +210,7 @@
       <h2
         class="heading text-gray-800 text-3xl md:text-5xl text-center font-bold italic mb-6"
       >
-        From Our Maintainer and Contributors
+        From Our Maintainer and Core team members
       </h2>
       <div
         class="my-10 md:my-16 flex flex-col md:flex-row shadow-sm overflow-hidden max-w-4xl mx-auto"
@@ -437,7 +437,7 @@
                     Fab Rizvi
                   </h2>
                   <small class="text-gray-500 text-xs md:text-sm truncate"
-                    >Contributor, TradeByte</small
+                    >Core team member, TradeByte</small
                   >
                   <p class="text-gray-800 text-2xl truncate">
                     <a
@@ -481,7 +481,7 @@
                     Somyaranjan Rout
                   </h2>
                   <small class="text-gray-500 text-xs md:text-sm truncate"
-                    >Contributor, TradeByte</small
+                    >Core team member, TradeByte</small
                   >
                   <p class="text-gray-800 text-2xl truncate">
                     <a
@@ -523,7 +523,7 @@
                     Garima Singh
                   </h2>
                   <small class="text-gray-500 text-xs md:text-sm truncate"
-                    >Contributor, TradeByte</small
+                    >Core team member, TradeByte</small
                   >
                   <p class="text-gray-800 text-2xl truncate">
                     <a
@@ -557,7 +557,7 @@
                     Anjali Kumari
                   </h2>
                   <small class="text-gray-500 text-xs md:text-sm truncate"
-                    >Contributor, TradeByte</small
+                    >Core team member, TradeByte</small
                   >
                   <p class="text-gray-800 text-2xl truncate">
                     <a target="_blank" href="https://github.com/somyaranjan26"
@@ -586,7 +586,7 @@
                     Ankit Pal
                   </h2>
                   <small class="text-gray-500 text-xs md:text-sm truncate"
-                    >Contributor, TradeByte</small
+                    >Core team member, TradeByte</small
                   >
                   <p class="text-gray-800 text-2xl truncate">
                     <a
