copy writing fixes

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -61,12 +61,13 @@
           >Contact</a
         >
         <div class="auth-box flex justify-center items-center">
-          <button
-            onClick="openModal()"
-            class="bg-red-700 text-white px-4 py-2 mt-2 mr-1 text-xs font-semibold bg-transparent rounded md:mt-0 md:ml-4 hover:bg-red-400 focus:bg-red-600 focus:outline-none focus:shadow-outline"
-          >
-            Sign in / Register
-          </button>
+          <a href="/user/signup">
+            <button
+              class="bg-red-700 text-white px-4 py-2 mt-2 mr-1 text-xs font-semibold bg-transparent rounded md:mt-0 md:ml-4 hover:bg-red-400 focus:bg-red-600 focus:outline-none focus:shadow-outline"
+            >
+              Register
+            </button>
+          </a>
         </div>
       </nav>
     </div>
@@ -106,7 +107,7 @@
   <section id="features" class="features bg-gray-200">
     <div class="max-w-5xl mx-auto p-8">
       <h2
-        class="heading text-gray-800 text-3xl md:text-5xl text-center font-bold italic mb-6"
+        class="heading text-gray-800 text-3xl md:text-5xl text-center font-bold mb-6"
       >
         Features of TradeByte
       </h2>
@@ -160,11 +161,11 @@
           <h3
             class="text-2xl md:text-3xl lg:text-4xl font-semibold mb-2 text-gray-700"
           >
-            Buy and Sell stocks
+            Buy and sell stocks
           </h3>
           <p class="text-sm md:text-lg lg:text-xl text-gray-600">
-            Buying and selling stocks was never this easy, we have made a
-            wallet for you where you can transfer your balance and directly make
+            Buying and selling stocks was never this easy, we have made a wallet
+            for you where you can transfer your balance and directly make
             payments while buying a stock. You can also buy multiple stocks. We
             provide a confirmation email as well to make sure it was you doing
             the transaction.
@@ -185,7 +186,7 @@
           <h3
             class="text-2xl md:text-3xl lg:text-4xl font-semibold mb-2 text-gray-700"
           >
-            Safe Payment Gateway with Stripe
+            Safe payment gateway with Stripe
           </h3>
           <p class="text-sm md:text-lg lg:text-xl text-gray-600">
             We have created a wallet for our app where you can add balance with
@@ -208,7 +209,7 @@
   <section id="testimonials" class="testimonials">
     <div class="max-w-5xl mx-auto p-8">
       <h2
-        class="heading text-gray-800 text-3xl md:text-5xl text-center font-bold italic mb-6"
+        class="heading text-gray-800 text-3xl md:text-5xl text-center font-bold mb-6"
       >
         From Our Maintainer and Core team members
       </h2>
@@ -269,8 +270,8 @@
                 >
                   It was challenging to plan and implement the project workflow
                   to maintain the code quality so that the team will contribute
-                  without worrying about other things. The team did very well and the project
-                  turned out to be the way I wanted.
+                  without worrying about other things. The team did very well
+                  and the project turned out to be the way I wanted.
                 </p>
               </div>
 
@@ -279,7 +280,9 @@
                   class="text-gray-600 serif font-normal italic px-6 py-12 md:py-16 lg:px-16 text-md h-64"
                   x-show.transition="testimonialActive == 2"
                 >
-                  Working with TradeByte team was a great experience! I worked with backend for the first time and it turned out really well. I loved collaborating with the team.
+                  Working with TradeByte team was a great experience! I worked
+                  with backend for the first time and it turned out really well.
+                  I loved collaborating with the team.
                 </p>
               </div>
 
@@ -289,9 +292,9 @@
                   x-show.transition="testimonialActive == 3"
                 >
                   I had a great learning experience here, we developed 3 apps
-                  including the main project. He managed the
-                  team very well and assigned us task according to our area of
-                  interest. TradeByte team members were great to work with.
+                  including the main project. He managed the team very well and
+                  assigned us task according to our area of interest. TradeByte
+                  team members were great to work with.
                 </p>
               </div>
 
