testimonial height fixed

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -339,7 +339,7 @@
             <div class="flex my-4 justify-center items-center flex-wrap">
               <button
                 @click.prevent="testimonialActive = 1"
-                class="text-center font-bold shadow-xs focus:outline-none focus:shadow-outline inline-block rounded-full mx-2"
+                class="text-center font-bold shadow-xs focus:outline-none focus:shadow-outline h-16 w-16 inline-block bg-blue-900 rounded-full mx-2 my-2"
                 :class="{'h-12 w-12 opacity-25 bg-blue-300 text-gray-600': testimonialActive != 1, 'h-16 w-16 opacity-100 bg-blue-900 text-white': testimonialActive == 1 }"
               >
                 PG
@@ -398,7 +398,7 @@
                     Pavan Gandhi
                   </h2>
                   <small class="text-gray-500 text-xs md:text-sm truncate"
-                    >Maintainer & Contributor, TradeByte</small
+                    >Maintainer & Core team member, TradeByte</small
                   >
                   <p class="text-gray-800 text-2xl truncate">
                     <a
