TradeByte Typos Fixed

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -18,7 +18,7 @@
           <a
             href="/"
             class="hover:text-gray-900 tracking-widest text-2xl md:text-2xl lg:text-3xl tradebyte-logo"
-            >Tradebyte</a
+            >TradeByte</a
           >
         </h4>
         <button
@@ -116,7 +116,7 @@
           <h3
             class="text-2xl md:text-3xl lg:text-4xl font-semibold mb-2 text-gray-700"
           >
-            Search for stocks in the Market
+            Search for stocks in the market
           </h3>
           <p class="text-sm md:text-lg lg:text-xl text-gray-600">
             You can search for multiple stocks from different companies and know
@@ -211,7 +211,7 @@
       <h2
         class="heading text-gray-800 text-3xl md:text-5xl text-center font-bold mb-6"
       >
-        From Our Maintainer and Core team members
+        From our Core team members
       </h2>
       <div
         class="my-10 md:my-16 flex flex-col md:flex-row shadow-sm overflow-hidden max-w-4xl mx-auto"
