--- a/views/partials/_nav.ejs
+++ b/views/partials/_nav.ejs
@@ -22,7 +22,7 @@
         href="/"
         class="hover:text-gray-900 tracking-widest text-2xl md:text-2xl lg:text-3xl text-blue-900"
         style="text-shadow: 1px 2px 40px rgba(0, 0, 0, 0.5)"
-        >Tradebyte</a
+        >TradeByte</a
       >
     </h4>
     <button
