webapp changed to app

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -86,7 +86,7 @@
           TradeByte
         </h1>
         <p class="text-lg sm:text-xl lg:text-2xl text-gray-700">
-          Welcome to TradeByte, stocks trading simulation webapp. Your one stop
+          Welcome to TradeByte, stocks trading simulation app. Your one stop
           to all the latest stocks and their insights.
         </p>
         <div>
@@ -660,7 +660,7 @@
       >
         <div class="text-center md:text-left">
           <a href="/" class="text-2xl font-bold"> TradeByte</a>
-          <p class="text-base">Stocks Trading Simulation WebApp.</p>
+          <p class="text-base">Stocks Trading Simulation App.</p>
           <p>This app is made for educational purpose only.</p>
         </div>
         <div class="flex mt-4 md:m-0 items-start">
