--- a/views/login.ejs
+++ b/views/login.ejs
@@ -86,7 +86,7 @@
           TradeByte
         </h1>
         <p class="text-lg sm:text-xl lg:text-2xl text-gray-700">
-          Welcome to TradeByte, stocks trading simulation app. Your one stop
+          Welcome to TradeByte, stocks trading simulation webapp. Your one stop
           to all the latest stocks and their insights.
         </p>
         <div>
@@ -211,7 +211,7 @@
       <h2
         class="heading text-gray-800 text-3xl md:text-5xl text-center font-bold mb-6"
       >
-        From our Core team members
+        From our team members
       </h2>
       <div
         class="my-10 md:my-16 flex flex-col md:flex-row shadow-sm overflow-hidden max-w-4xl mx-auto"
@@ -398,7 +398,7 @@
                     Pavan Gandhi
                   </h2>
                   <small class="text-gray-500 text-xs md:text-sm truncate"
-                    >Maintainer & Core team member, TradeByte</small
+                    >Maintainer & Contributor, TradeByte</small
                   >
                   <p class="text-gray-800 text-2xl truncate">
                     <a
@@ -440,7 +440,7 @@
                     Fab Rizvi
                   </h2>
                   <small class="text-gray-500 text-xs md:text-sm truncate"
-                    >Core team member, TradeByte</small
+                    >Contributor, TradeByte</small
                   >
                   <p class="text-gray-800 text-2xl truncate">
                     <a
@@ -484,7 +484,7 @@
                     Somyaranjan Rout
                   </h2>
                   <small class="text-gray-500 text-xs md:text-sm truncate"
-                    >Core team member, TradeByte</small
+                    >Contributor, TradeByte</small
                   >
                   <p class="text-gray-800 text-2xl truncate">
                     <a
@@ -526,7 +526,7 @@
                     Garima Singh
                   </h2>
                   <small class="text-gray-500 text-xs md:text-sm truncate"
-                    >Core team member, TradeByte</small
+                    >Contributor, TradeByte</small
                   >
                   <p class="text-gray-800 text-2xl truncate">
                     <a
@@ -560,7 +560,7 @@
                     Anjali Kumari
                   </h2>
                   <small class="text-gray-500 text-xs md:text-sm truncate"
-                    >Core team member, TradeByte</small
+                    >Contributor, TradeByte</small
                   >
                   <p class="text-gray-800 text-2xl truncate">
                     <a target="_blank" href="https://github.com/somyaranjan26"
@@ -589,7 +589,7 @@
                     Ankit Pal
                   </h2>
                   <small class="text-gray-500 text-xs md:text-sm truncate"
-                    >Core team member, TradeByte</small
+                    >Contributor, TradeByte</small
                   >
                   <p class="text-gray-800 text-2xl truncate">
                     <a
@@ -660,7 +660,7 @@
       >
         <div class="text-center md:text-left">
           <a href="/" class="text-2xl font-bold"> TradeByte</a>
-          <p class="text-base">Stocks Trading Simulation App.</p>
+          <p class="text-base">Stocks Trading Simulation WebApp.</p>
           <p>This app is made for educational purpose only.</p>
         </div>
         <div class="flex mt-4 md:m-0 items-start">
